--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ APP_VERSION="1.0.0"
 # ==================== DATABASE ====================
 # Supabase PostgreSQL connection string
 # Get from: https://supabase.com → Your Project → Settings → Database
-DATABASE_URL=postgresql://postgres:Durokave#123@db.odlyqsbzdrhbroggcwkx.supabase.co:5432/postgres
+DATABASE_URL=sqlite:///./outfit_planner.db
 
 # ==================== OLLAMA / LLAMA ====================
 # Local Ollama server
@@ -16,8 +16,8 @@ OLLAMA_MODEL=llama3.1:latest
 
 # ==================== RUNPOD (GPU FOR VIRTUAL TRY-ON) ====================
 # Get from: https://runpod.io → Serverless → Your Endpoint
-RUNPOD_API_KEY=your_runpod_api_key_here
-RUNPOD_ENDPOINT_ID=your_endpoint_id_here
+# RUNPOD_API_KEY=your_runpod_api_key_here
+# RUNPOD_ENDPOINT_ID=your_endpoint_id_here
 
 # ==================== CLOUDINARY (IMAGE STORAGE) ====================
 # Get from: https://cloudinary.com → Dashboard
