--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -45,4 +45,9 @@ redis==5.0.1
 
 # Testing
 pytest==7.4.4
-pytest-asyncio==0.23.3
+pytest-asyncio==0.23.3\
+# Local IDM-VTON dependencies
+diffusers>=0.25.0
+transformers>=4.36.0
+accelerator>=0.25.0
+safetensors>=0.4.0\
