--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,53 +1,34 @@
-# Core Framework - Python 3.13 Compatible
+# ===========================================
+# AI Outfit Recommender - Backend Dependencies
+# ===========================================
+
+# Core Framework
 fastapi==0.115.0
 uvicorn[standard]==0.32.0
 pydantic>=2.9.0
 pydantic-settings==2.6.0
 
-# Database - UPDATED SQLAlchemy for Python 3.13
-sqlalchemy>=2.0.36
-psycopg[binary]>=3.2.2
-pgvector==0.2.4
-
-# AI/ML - Python 3.13 Compatible
-sentence-transformers==3.3.1
-transformers>=4.41.0
-torch==2.6.0
-torchvision==0.21.0
-Pillow>=10.4.0
-numpy>=1.26.4
-
-# HTTP & API - Fixed version conflicts
-httpx<0.26.0,>=0.25.2
+# HTTP & API
+httpx>=0.25.0
 requests==2.31.0
 aiofiles==23.2.1
 
-# Ollama for Llama
-ollama==0.1.6
-
 # Image Processing
-opencv-python>=4.10.0
+Pillow>=10.4.0
 cloudinary==1.38.0
+
+# Firebase Auth
+firebase-admin>=6.0.0
 
 # Utilities
 python-dotenv==1.0.0
 python-multipart==0.0.6
 
-# CORS & Security
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+# Rate Limiting
+slowapi>=0.1.9
 
 # Logging
 loguru==0.7.2
 
-# Redis (optional, for caching)
-redis==5.0.1
-
-# Testing
-pytest==7.4.4
-pytest-asyncio==0.23.3\
-# Local IDM-VTON dependencies
-diffusers>=0.25.0
-transformers>=4.36.0
-accelerator>=0.25.0
-safetensors>=0.4.0\
+# Error Monitoring (optional)
+sentry-sdk[fastapi]>=1.38.0
