--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,7 @@ aiofiles==23.2.1
 Pillow>=10.4.0
 cloudinary==1.38.0
 rembg>=2.0.50
+onnxruntime>=1.16.0
 
 # Replicate API (Virtual Try-On)
 replicate>=0.25.0
